@@ -653,11 +653,15 @@ liouville(IN char* strn)
     is_totient = 3
     is_carmichael = 4
     is_fundamental = 5
+    hammingweight = 6
   PREINIT:
     mpz_t n;
     int isneg;
   CODE:
-    isneg = validate_and_set_signed(cv, n, "n", strn, (ix==0) ? VSETNEG_ERR : VSETNEG_OK);
+    isneg = validate_and_set_signed( cv, n, "n", strn,
+                                     (ix == 0) ? VSETNEG_ERR
+                                   : (ix == 6) ? VSETNEG_POS
+                                   :             VSETNEG_OK );
     if (isneg && (ix == 1 || ix == 2 || ix == 3 || ix == 4)) {
       RETVAL = 0;
     } else {
@@ -667,8 +671,9 @@ liouville(IN char* strn)
         case 2:  RETVAL = is_semiprime(n);   break;
         case 3:  RETVAL = is_totient(n);     break;
         case 4:  RETVAL = is_carmichael(n);  break;
-        case 5:
-        default: RETVAL = is_fundamental(n); break;
+        case 5:  RETVAL = is_fundamental(n); break;
+        case 6:
+        default: RETVAL = mpz_popcount(n);   break;
       }
     }
     mpz_clear(n);
